chandeliers-lus/tests/compile_fail/ui/clk/undeclared.rs
chandeliers_lus::decl! {
    node foo(b : bool; i : int when b2) returns ();
    let tel;
}

fn main() {}
